--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "sass": "1.66.1",
     "terser-webpack-plugin": "^5.3.14",
     "tinify": "^1.8.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
     "webpack": "^5.98.0",
     "webpack-stream": "^7.0.0"
   },
