--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-class-properties": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
+    "@types/bootstrap": "^5.2.10",
     "@types/webpack-stream": "^3.2.15",
     "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.4",
