--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.5"
+    "bootstrap": "^5.3.5",
+    "swiper": "^11.2.8"
   }
 }
